Update Control Room stock and refurbishment website checks
